--- a/users/composer.json
+++ b/users/composer.json
@@ -5,14 +5,13 @@
     "keywords": ["laravel", "framework"],
     "license": "MIT",
     "require": {
-        "php": "^8.1",
+        "php": "8.0",
         "guzzlehttp/guzzle": "^7.2",
         "laravel/framework": "^10.10",
-        "laravel/horizon": "^5.18",
         "laravel/sanctum": "^3.2",
         "laravel/tinker": "^2.8",
         "php-amqplib/php-amqplib": "^3.5",
-        "predis/predis": "^2.2",
+        "enqueue/amqp-bunny": "^0.10.9",
         "vladimir-yuldashev/laravel-queue-rabbitmq": "^13.3"
     },
     "require-dev": {
