--- a/notifications/docker-compose.yml
+++ b/notifications/docker-compose.yml
@@ -17,10 +17,11 @@ services:
             XDEBUG_MODE: '${SAIL_XDEBUG_MODE:-off}'
             XDEBUG_CONFIG: '${SAIL_XDEBUG_CONFIG:-client_host=host.docker.internal}'
             IGNITION_LOCAL_SITES_PATH: '${PWD}'
+            RABBITMQ_HOST: 'rabbitmq'
         volumes:
             - '.:/var/www/html'
         networks:
-            - sail
+            - users_sail
 networks:
-    sail:
-        driver: bridge
+    users_sail:
+        name: users_sail
