Fix missing env variable

--- a/users/.env.example
+++ b/users/.env.example
@@ -30,3 +30,4 @@ RABBITMQ_USER=
 RABBITMQ_PASSWORD=
 RABBITMQ_QUEUE=users_queue
 RABBITMQ_EXCHANGE_NAME=test_exchange
+RABBITMQ_ROUTING_KEY=test_key
